force-app/main/default/objects/nFUSE__DocMan_Template__mdt/nFUSE__DocMan_Template__mdt.object-meta.xml
<CustomObject>
    <description>This object houses Document Manager template configuration.</description>
    <label>DocMan Template</label>
    <pluralLabel>DocMan Templates</pluralLabel>
</CustomObject>