force-app/main/default/objects/nFUSE__DocMan_Template__mdt/fields/nFUSE__Doc_Class__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Doc_Class__c</fullName>
    <description>Document Class</description>
    <label>Placeholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>