force-app/main/default/objects/nFUSE__DocMan_Template__mdt/fields/nFUSE__Doc_Man__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Doc_Man__c</fullName>
    <description>Document Manager Name</description>
    <label>Document Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>