force-app/main/default/objects/nFUSE__DocMan_Template__mdt/fields/nFUSE__Doc_Tab__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Doc_Tab__c</fullName>
    <description>Document Tab</description>
    <label>Document Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>