force-app/main/default/objects/nFUSE__DocMan_Template__mdt/fields/nFUSE__Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Doc_Type__c</fullName>
    <description>Document Type</description>
    <label>Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>