force-app/main/default/objects/nFUSE__DocMan_Template__mdt/fields/nFUSE__File_Name__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__File_Name__c</fullName>
    <description>Document File Name</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>